# PI_labs

./: .gitignore  CMakeLists.txt  README.md  main.cpp
01/: OpenCVApplication.cpp
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  fmt-config.cmake  fmt-release-x86_64-data.cmake  spdlog-config.cmake  spdlog-release-x86_64-data.cmake
image-processing-laboratory_linux_template/: CMakeLists.txt  conanfile.py  main.cpp
image-processing-laboratory_linux_template/src/common/: paths.h
image-processing-laboratory_linux_template/src/common/file/: file_utils.h
linux-template/: CMakeLists.txt  conanfile.py
linux-template/src/color_spaces/: spaces.cpp
linux-template/src/common/: common.h  misc.cpp  misc.h
linux-template/src/common/file/: file_utils.cpp
linux-template/src/common/logger/: logger.cpp
scripts/: conan_install.sh
src/color_spaces/: spaces.h
src/common/logger/: logger.h
src/slider/: slider.cpp  slider.h
